--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -15,6 +15,21 @@
     <div>
       
         <h1 id="title" class="heading"> DOM learning on  Chai our Code <span style="display: none;"> test text </span> </h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
+
+
         <p>Lorem ipsum dolor sit amet.</p>
 
     </div>
